<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jasonsriordan.filmapp.NewEntry">

    <EditText
        android:id="@+id/entry_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/entry_title"/>

    <EditText
        android:id="@+id/entry_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/entry_release"
        android:layout_below="@+id/entry_name"/>

    <EditText
        android:id="@+id/entry_director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/entry_director"
        android:layout_below="@+id/entry_date"/>

    <Button
        android:id="@+id/create_entry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/create_entry"
        android:layout_below="@+id/entry_director"/>

</RelativeLayout>
